--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ rust-version = "1.80"
 [dependencies]
 anyhow = "1.0.68"                                # error handling
 bytes = "1.3.0"                                  # helps manage buffers
+os_pipe = "1.2.2"
 rustyline = "17.0.2"
 shell-words = "1.1.0"
 thiserror = "1.0.38"                             # error handling
